# Pico_TFT

./: .gitignore  CMakeLists.txt  README.md  def.h  image256.h  image332.h  image565.h  lv_conf.h  lv_port_disp.c  lv_port_disp.h  main.c
Drivers/: Chipset.h  Graphics.c  Graphics.h  Interface.h  PIO_RGB.c  PIO_RGB.pio.h  Pinout.h  SPI_RGB.c  portable.h
Drivers/Chipsets/: GC9A01A.c  GC9A01_Defines.h  Generics_Regs.h  ILI9488.c  ILI9488_Defines.h
